fixed bug loading about

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
             <ul id="navlist">
                 {% block nav %}{% endblock %}
                 <li><a href="{{url_for('home')}}">home</a></li>
-                <li><a href="{{url_for('main')}}">about PARTs</a></li>
+                <li><a href="/about/">about PARTs</a></li>
                 <li><a href="{{url_for('contact')}}">contact us</a></li>
                 <li><a href="{{url_for('add_entry')}}">team updates</a></li>
                 <li><a href="{{url_for('pictures')}}">pictures</a></li> 
