working events board

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
    	<script type="text/javascript" src="/static/jquery-1.7.1.min.js"></script>
     </head>
     <body>
-        <img src="http://i.imgur.com/CMIqwc7.jpg" id="Banner">
+        <img src="http://imgur.com/NmGtjUT" id="Banner">
 	<div id="navbg">
 	</div>
         <div id="navcontainer">
@@ -17,6 +17,7 @@
                 <li><a href="/about/">about PARTs</a></li>
                 <li><a href="{{url_for('contact')}}">contact us</a></li>
                 <li><a href="{{url_for('add_entry')}}">team updates</a></li>
+                <li><a href="{{url_for('events')}}">upcoming events</a></li>
                 <li><a href="{{url_for('pictures')}}">pictures</a></li> 
                 <li><a href="{{url_for('videos')}}">videos</a></li> 
                 <li><a href="{{url_for('support')}}">donate</a></li>  
