--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
    	<script type="text/javascript" src="/static/jquery-1.7.1.min.js"></script>
     </head>
     <body>
-        <img src="http://imgur.com/NmGtjUT" id="Banner">
+        <img src="/static/foobar/banner.jpg" id="Banner">
 	<div id="navbg">
 	</div>
         <div id="navcontainer">
